crates/ir/tests/ir/snapshots/main__ir__lower__modules__transitive_leak_reexport.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__transitive_leak_reexport

extern java "krypton.runtime.KryptonIO" println(y7) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import transitive_leak_lib/re_exported as re_exported(Int) -> Int
declare println: (y7) -> Unit
declare re_exported: (Int) -> Int

fn main() -> Unit =
  let v0: Int = call re_exported(3)
  let v1: Unit = call println(v0)
  v1
