crates/ir/tests/ir/snapshots/main__ir__lower__modules__type_qualify_trait.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__type_qualify_trait

trait MyEq[i11] { my_eq(i11, i11): Bool }
instance modules__type_qualify_trait.MyEq[Int] { my_eq=MyEq$$Int$$my_eq }
extern java "krypton.runtime.KryptonIO" println(x10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (x10) -> Unit

fn main() -> Unit =
  let v0: Dict[modules__type_qualify_trait.MyEq, Int] = get_dict modules__type_qualify_trait.MyEq[Int]
  let v1: Bool = trait_call modules__type_qualify_trait.MyEq.my_eq(v0, 42, 42)
  let v2: Unit = call println(v1)
  v2

fn MyEq$$Int$$my_eq(v3: Int, v4: Int) -> Bool =
  let v5: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v6: Bool = trait_call core/eq.Eq.eq(v5, v3, v4)
  v6
