crates/ir/tests/ir/snapshots/main__ir__lower__modules__ufcs_prefix_ambiguous.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__ufcs_prefix_ambiguous

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import int_mod/abs as abs(Int) -> Int
import float_mod/abs as abs(Float) -> Float
