crates/ir/tests/ir/snapshots/main__ir__lower__modules__ufcs_trait_unaffected.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__ufcs_trait_unaffected

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn map(v0: Int, v1: (Int) -> Int) -> Int =
  let v2: Int = call_closure v1(v0)
  v2

fn double(v3: Int) -> Int =
  let v4: Int = add_int(v3, v3)
  v4

fn main() -> Int =
  let v7: (Int) -> Int = make_closure(lambda$25, [])
  let v8: Int = call map(5, v7)
  v8

fn lambda$25(v5: Int) -> Int =
  let v6: Int = call double(v5)
  v6
