crates/ir/tests/ir/snapshots/main__ir__lower__modules__use_math.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__use_math

extern java "krypton.runtime.KryptonIO" println(r10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import math/vec/sum as sum(Int, Int) -> Int
declare println: (r10) -> Unit
declare sum: (Int, Int) -> Int

fn main() -> Unit =
  let v0: Int = call sum(3, 5)
  let v1: Unit = call println(v0)
  v1
