crates/ir/tests/ir/snapshots/main__ir__lower__modules__use_trait_eq_lib.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__use_trait_eq_lib

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let_join v9(v7: Bool) =
    let v0: Dict[core/show.Show, Bool] = get_dict core/show.Show[Bool]
    let v8: Unit = call println(v0, v7)
    v8
  in
  let v1: Dict[core/eq.Eq, Dir] = get_dict core/eq.Eq[Dir]
  let v2: Dir = construct Dir::North#0()
  let v3: Dir = v2
  let v4: Dir = construct Dir::North#0()
  let v5: Dir = v4
  let v6: Bool = trait_call core/eq.Eq.eq(v1, v3, v5)
  jump v9(v6)
